# sc_1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cxx  mainwindow.cxx  mainwindow.h  mainwindow.ui  parametersdialog.cxx  parametersdialog.h  parametersdialog.ui
